Byttet ut 'management.endpoint.prometheus.enabled' som er deprikert (#325)