@@ -82,7 +82,10 @@ dependencies {
 kotlin {
 	jvmToolchain(21)
 	compilerOptions {
-		freeCompilerArgs.add("-Xjsr305=strict")
+		freeCompilerArgs.addAll(
+			"-Xjsr305=strict",
+			"-Xannotation-default-target=param-property",
+		)
 	}
 }
 
@@ -96,5 +99,8 @@ tasks.jar {
 
 tasks.test {
 	useJUnitPlatform()
-	jvmArgs("-Xshare:off")
+	jvmArgs(
+		"-Xshare:off",
+		"-XX:+EnableDynamicAgentLoading",
+	)
 }
